@@ -8,11 +8,15 @@
       ///////////////////////////////////////////////////////////////////////////
     </template>
     <template name="cpp_preamble">
+	  @#ifdef WX_PRECOMP		#nl
+	                            #nl
+	  @#include &quot;$precompiled_header&quot; #nl
+	                            #nl
       @#ifdef __BORLANDC__      #nl
         @#pragma hdrstop        #nl
       @#endif //__BORLANDC__    #nl
                                 #nl
-      @#ifndef WX_PRECOMP       #nl
+      @#else			        #nl
       @#include &lt;wx/wx.h&gt; #nl
       @#endif //WX_PRECOMP
 	</template>
